fix button gap

--- a/src/ui/apps/client/src/styles/button.css
+++ b/src/ui/apps/client/src/styles/button.css
@@ -7,6 +7,7 @@ button {
   border-radius: var(--radius);
   color: var(--neutral--10);
   font-size: 16px;
+  gap: 8px;
 }
 button span {
   font-size: 16px;
